fix: ajustar spacing de las paginas

--- a/src/app/Components/about-us/about-agents/about-agents.component.scss
+++ b/src/app/Components/about-us/about-agents/about-agents.component.scss
@@ -8,7 +8,7 @@
 .about-agents-container {
     background-color: white;
     margin-top: 70px;
-    margin-bottom: 70px;
+    padding-bottom: $padding-section;;
 }
 .agents-about__subtitle, .agents-about__title{
     font-family: $font-family-title;
