--- a/src/app/Components/agent-details/agent-details-content/agent-details-content.component.scss
+++ b/src/app/Components/agent-details/agent-details-content/agent-details-content.component.scss
@@ -9,6 +9,7 @@
 .agent-container-box{
     display: flex;
     gap: 40px;
+    padding-bottom: $padding-section;;
 
     .container-box-left{
 
