--- a/src/app/Components/contact-me/contact-me.component.scss
+++ b/src/app/Components/contact-me/contact-me.component.scss
@@ -10,6 +10,7 @@
     width: 20px;
     height: 20px;
     margin-right: 10px;
+
 }
 .about-container-header {
     background-color: $detail-color;
@@ -75,6 +76,8 @@
 .form-container{
     padding: 50px;
     border: 1px solid rgba(0,0,0,.3);
+    margin-bottom: $padding-section;;
+
 }
 
 
