--- a/src/app/Components/home/banner/banner.component.scss
+++ b/src/app/Components/home/banner/banner.component.scss
@@ -2,8 +2,6 @@
 
 .banner-container {
     background-color: $secondary-color;
-    padding-top: $padding-section;
-    padding-bottom:$padding-section;
 }
 .banner-container-wrapper{
     display: flex;
