--- a/src/app/Components/home/core-features/core-features.component.scss
+++ b/src/app/Components/home/core-features/core-features.component.scss
@@ -2,7 +2,6 @@
 
 .features-container {
   background-color : white;
-  padding-top: $padding-section;
   padding-bottom: $padding-section;
   .features-container-title-cards-box {
     display: flex;
